// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
.sxg6i02 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sxg6i02:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxg6i02[disabled] {
  background-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal700);
  cursor: not-allowed;
}

.sxg6i02-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sxg6i02 sxg6i02-6obnf"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
.sxg6i02 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sxg6i02:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxg6i02[disabled] {
  background-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal700);
  cursor: not-allowed;
}

.sxg6i02-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sxg6i02 sxg6i02-6obnf"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
